[tool.poetry]
name = "newegg_gpu_scrape"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Bolh <jbbolh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
streamlit = "^1.10.0"
pandas = "^1.4.3"
plotly = "^5.9.0"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
